--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <li>Content Upload</li>
                         <li>Mobile Responsive</li>
                         <li>Free Website Publishing*</li>
-                        <li>*Standard Charges Applly For Domain & Hosting</li>
+                        <li>*Standard Charges Apply For Domain & Hosting</li>
                     </ul>
 
                     <button onclick="location.href = '#contact'" class="bookNow">BOOK NOW</button>
