--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <div id="menu"></div>
+        <div onclick="menuBarToggle()" id="menu"></div>
     </nav>
     <!-- ========== Navigation Ends ========== -->
 
 
     <ul id="navUL">
-        <li><a href="#">Home</a></li>
-        <li><a href="#pricing">Pricing</a></li>
-        <li><a href="#courses">Courses</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a onclick="menuBarToggle()"  href="#">Home</a></li>
+        <li><a onclick="menuBarToggle()"  href="#pricing">Pricing</a></li>
+        <li><a onclick="menuBarToggle()"  href="#courses">Courses</a></li>
+        <li><a onclick="menuBarToggle()"  href="#about">About</a></li>
+        <li><a onclick="menuBarToggle()"  href="#contact">Contact</a></li>
     </ul>
 
     <!-- ========== Header Section ========== -->
