--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 
     <ul id="navUL">
-        <li><a onclick="menuBarToggle()"  href="#">Home</a></li>
-        <li><a onclick="menuBarToggle()"  href="#pricing">Pricing</a></li>
-        <li><a onclick="menuBarToggle()"  href="#courses">Courses</a></li>
-        <li><a onclick="menuBarToggle()"  href="#about">About</a></li>
-        <li><a onclick="menuBarToggle()"  href="#contact">Contact</a></li>
+        <li><a onclick="menuBarToggle()" href="#">Home</a></li>
+        <li><a onclick="menuBarToggle()" href="#pricing">Pricing</a></li>
+        <li><a onclick="menuBarToggle()" href="#courses">Courses</a></li>
+        <li><a onclick="menuBarToggle()" href="#about">About</a></li>
+        <li><a onclick="menuBarToggle()" href="#contact">Contact</a></li>
     </ul>
 
     <!-- ========== Header Section ========== -->
@@ -255,7 +255,8 @@
                     <hr>
 
                     <ul class="text-left">
-                        <li>Best suited for students or working professionals who wants to build their own customized personal computer which can fulfill their needs. </li>
+                        <li>Best suited for students or working professionals who wants to build their own customized
+                            personal computer which can fulfill their needs. </li>
                     </ul>
 
                     <button onclick="location.href = '#contact'" class="bookNow">BOOK NOW</button>
@@ -295,12 +296,13 @@
                         <p>1,000/-</p>
                         <button class="saveTag">SAVE 40%</button>
                     </div>
-                    <p class="rate"><span>&#8377</span> 599/m</p>
+                    <p class="rate"><span>&#8377</span> 599/-</p>
                     <p class="prepaid">* PREPAID</p>
                     <hr>
 
                     <ul class="text-left">
-                        <li>Best suited for the ones who have already purchased the components of their choice but having problem to assemble them.</li>
+                        <li>Best suited for the ones who have already purchased the components of their choice but
+                            having problem to assemble them.</li>
                     </ul>
 
                     <button onclick="location.href = '#contact'" class="bookNow">BOOK NOW</button>
@@ -326,11 +328,14 @@
                 </div>
                 <div class="cdbRight">
                     <h3 class="primaryColor uppercase ">Computer basics</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nam doloribus tenetur perferendis
-                        autem nesciunt dignissimos tempore porro amet accusantium doloremque, cum debitis, ut
-                        reprehenderit quas pariatur quis rem eveniet unde reiciendis explicabo velit iusto. Porro
-                        placeat dolor in dolorum facilis cumque. Omnis veniam quisquam similique quo tenetur.
+                    <p>A guide for new computer users or those who want to know more to get started with the basics! Or
+                        if you are someone who knows a little about computers but don’t have the confidence to get
+                        started with other things, this course might help you.
                     </p>
+                    <p>We will learn basics of using computer step by step. We will learn what windows is, what are the
+                        correct names of computer parts and also the basics of internet. If you have ever wished to join
+                        some advance IT course but struggled due to the lack of basic computer skills, this course could
+                        be the great start for your journey.</p>
                 </div>
             </div>
 
