--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Georama:wght@700&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
+
     <!-- custom css  -->
     <link rel="stylesheet" href="css/style.css">
 
